<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="album_file_select">请选择文件</string>
    <string name="album_list_dvr_button_empty">继续查看</string>
    <string name="album_list_dvr_continue">是否继续查看行车记录仪</string>
    <string name="album_list_dvr_p">为了您的行车安全，请先切换至P档</string>
    <string name="album_list_dvr_replay">浏览行车记录仪相册期间，行车记录仪将停止录制</string>
    <string name="album_list_empty">相册为空，快去拍摄您的第一段视频吧！</string>
    <string name="album_list_failed">文件加载失败</string>
    <string name="album_text_all_chose">全选</string>
    <string name="album_text_chose">选择</string>
    <string name="album_text_description">相册</string>
    <string name="album_text_share">分享到鹏友圈</string>
    <string name="album_text_storage_info">空间已使用 %1$s</string>
    <string name="album_text_transfer">发送到手机</string>
    <string name="ap_disable">热点已关闭</string>
    <string name="ap_operation_quick">请勿频繁操作！</string>
    <string name="app_name">相册</string>
    <string name="btn_go_to_list">去相册</string>
    <string name="btn_retry">重新加载</string>
    <string name="btn_send_to_phone">发送到手机</string>
    <string name="connect_xlist">已连接</string>
    <string name="detail_date_taken_d21">拍摄时间:%1$s</string>
    <string name="detail_file_size">文件大小:%1$s</string>
    <string name="detail_file_title">文件详情</string>
    <string name="detail_video_duration">视频时长:%1$s</string>
    <string name="dialog_cancel_share_dialog_cancel">继续发布</string>
    <string name="dialog_cancel_share_dialog_content">确定要取消发布到小鹏社区？</string>
    <string name="dialog_cancel_share_dialog_ok">取消发布</string>
    <string name="dialog_cancel_share_dialog_title">取消发布</string>
    <string name="dlg_btn_cancel">取消</string>
    <string name="dlg_btn_delete">删除</string>
    <string name="dlg_btn_ok">确定</string>
    <string name="dlg_msg_delete_file">确认删除这个文件吗？</string>
    <string name="dlg_msg_delete_files">确认删除这%1$s个文件吗？</string>
    <string name="dlg_msg_play_video">为了您的安全，建议您在停车状态观看视频！</string>
    <string name="dlg_title_play_video">安全提示</string>
    <string name="dvr_msg_change_to_replay_mode">浏览行车记录仪相册期间，行车记录仪将停止录制工作，退出后自动恢复录制！是否继续访问行车记录仪相册？</string>
    <string name="dvr_sdcard_removed">行车记录仪SD卡已移除</string>
    <string name="dvr_title_change_to_replay_mode">停止录像</string>
    <string name="file_delete_wait_d21">文件正在删除中，请稍后</string>
    <string name="log_already_upload">日志已经上传</string>
    <string name="play_video_tips_message">为了您的安全，建议您在停车状态观看视频!</string>
    <string name="play_video_tips_title">安全提示</string>
    <string name="publish_content_not_null">鹏友们都要看呢，多少打两个字吧！</string>
    <string name="publish_scan_tips">扫描二维码可分享至微信，微博等三⽅社区</string>
    <string name="publish_success">已发布成功，请在小鹏APP查看</string>
    <string name="publish_to_server_btn_title">发布</string>
    <string name="publish_to_server_failure_cancel">取消</string>
    <string name="publish_to_server_failure_confirm">确定</string>
    <string name="publish_to_server_failure_content">因为网络问题，导致本次发布失败请稍后再试</string>
    <string name="publish_to_server_failure_repeat_content">因为网络问题，暂未发布成功，点击\"重试\"按钮，继续发布</string>
    <string name="publish_to_server_failure_retry">重试</string>
    <string name="publish_to_server_failure_title">发布失败</string>
    <string name="publish_upload_progress">%1$d/%2$d</string>
    <string name="publish_uploading">正在上传</string>
    <string name="search_menu_title">Search</string>
    <string name="share_content_length">0/1000</string>
    <string name="share_edit_contain_pic_and_video">不支持视频和图片一起分享,请重新选择文件。</string>
    <string name="share_edit_exceed_max_duration">视频文件不能超过30秒,请重新选择文件。</string>
    <string name="share_edit_exceed_max_pic_count">分享图片数超过9个,请重新选择文件。</string>
    <string name="share_edit_exceed_max_size">每次分享的文件总大小不能超过30M,请重新选择文件。</string>
    <string name="share_edit_exceed_max_video_count">只能分享一个视频文件，请重新选择</string>
    <string name="share_edit_file">发布到鹏友圈</string>
    <string name="share_edit_hint">点击下面语音按钮可输入文字</string>
    <string name="share_edit_no_choice">请选择文件</string>
    <string name="share_edit_publish">发布</string>
    <string name="share_publish_text_limit">输入字数已超过限制</string>
    <string name="share_publish_tips_content">1. 文件上传期间，请勿离开此页，以免发布失败\n2. 文件上传期间，请勿关闭车辆电源或4G网络\n3. 文件上传期间，请勿离开P档</string>
    <string name="share_publish_tips_title">等待提示</string>
    <string name="share_publish_title">正在发布到鹏友圈</string>
    <string name="share_publish_title_d21">发布到鹏友圈</string>
    <string name="share_publishing_do_not_leave">正在发布到鹏友圈\n请勿离开此页</string>
    <string name="share_publishing_do_not_leave_d21">正在发布到鹏友圈,请勿离开此页</string>
    <string name="shared_lib_path">/system/vendor/lib/irdeto/</string>
    <string name="simple_date_format">yyyy年MM月dd日</string>
    <string name="simple_format_8">yyyy年MM月dd日 HH:mm</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tab_camera_360">360影像</string>
    <string name="tab_camera_back">后视影像</string>
    <string name="tab_car_record">行车记录仪</string>
    <string name="tab_car_top">车顶摄像头</string>
    <string name="tag_e28">E28</string>
    <string name="text_ok">确定</string>
    <string name="toast_check_delete_size">请选择文件</string>
    <string name="toast_check_transfer_size_more_than_nine">每次最多只能发送9个文件</string>
    <string name="toast_check_transfer_size_zero">请选择文件</string>
    <string name="toast_file_transfer_progress">文件传输进行中</string>
    <string name="toast_hotspot_opened_success">热点开启成功！</string>
    <string name="toast_hotspot_turn_on_fail_tips">热点开启失败,请手动开启!</string>
    <string name="toast_transfer_over">传输已完成</string>
    <string name="toast_transfer_under_way">已经转入后台传输！传输期间请勿关闭车机热点，以免中断。</string>
    <string name="transfer_chose_connect_client">请选择接受设备</string>
    <string name="transfer_complete">传输已结束</string>
    <string name="transfer_connect_under_way">正在传输中…</string>
    <string name="transfer_connect_under_way_d21">文件传输中</string>
    <string name="transfer_file_all_failure">文件传输失败，即将关闭热点!</string>
    <string name="transfer_file_all_success">文件传输完成，即将关闭热点!</string>
    <string name="transfer_file_ap_close">WiFi热点已关闭</string>
    <string name="transfer_file_ap_connect">请打开小鹏汽车app接收文件</string>
    <string name="transfer_file_ap_info">WiFi:%1$s 密码:%2$s</string>
    <string name="transfer_file_ap_tips">请用您的手机连接以下热点，然后打开小鹏汽车App</string>
    <string name="transfer_file_ap_usage">使用提示</string>
    <string name="transfer_file_ap_usage_content">1.  请确保您的手机已经安装了小鹏汽车App，并已更新至最新版。\n2.  文件传输期间，大屏和手机APP要保持在传输界面，以免中断。\n3.  文件传输期间，手机无法上网，传输完成，断开连接后将恢复联网。\n4.  文件传输期间，请勿关闭车辆或手机WiFi，保持网络通畅。</string>
    <string name="transfer_file_background">后台传输</string>
    <string name="transfer_file_connect_error_content">传输失败!请重新连接热点，保持网络畅通。</string>
    <string name="transfer_file_connect_error_title">手机已断开连接</string>
    <string name="transfer_file_connected">已连接</string>
    <string name="transfer_file_do_connect">请用您的手机连接热点</string>
    <string name="transfer_file_exceed_max_count">每次最多只能发送9个文件,请重新选择文件。</string>
    <string name="transfer_file_exceed_max_count_and_size">文件数超过9个，且总大小超过1.5G,请重新选择文件。</string>
    <string name="transfer_file_exceed_max_size">每次发送的文件总大小不能超过1.5G</string>
    <string name="transfer_file_exit_content">退出发送流程后将关闭文件传输，关闭WiFi热点\n确定退出发送流程？</string>
    <string name="transfer_file_exit_title">退出发送流程</string>
    <string name="transfer_file_failure">传输失败</string>
    <string name="transfer_file_finish">传输完成</string>
    <string name="transfer_file_in_transfer">文件传输期间，请勿离开传输页面，请勿离开P档或关闭车辆电源</string>
    <string name="transfer_file_item_connected">开始发送</string>
    <string name="transfer_file_no_choice">请选择文件</string>
    <string name="transfer_file_part_success">%1$d个文件发送成功，%2$d个文件发送失败,即将关闭热点!</string>
    <string name="transfer_file_please_chose_device">请选择接收设备</string>
    <string name="transfer_file_please_confirm">请打开小鹏汽车app接收文件</string>
    <string name="transfer_file_reject_again">再次发送</string>
    <string name="transfer_file_reject_content">手机端App无反馈或拒绝接收文件</string>
    <string name="transfer_file_reject_title">手机未连接</string>
    <string name="transfer_file_select_empty_file">选择文件为空</string>
    <string name="transfer_file_title_all_success">文件传输完成</string>
    <string name="transfer_file_title_failure">文件传输失败</string>
    <string name="transfer_file_title_in_transfer">文件传输中...</string>
    <string name="transfer_file_title_partial_failure">部分文件传输失败</string>
    <string name="transfer_file_toast_connect_error">WiFi可能已经断开连接</string>
    <string name="transfer_file_wait_for_connected">等待手机接收</string>
    <string name="transfer_file_warning">请勿离开传输页面，请勿关闭车辆电源或离开P档</string>
    <string name="transfer_file_wifi_password">密码:</string>
    <string name="vui_label_activity_back">返回</string>
    <string name="vui_label_cancel">取消</string>
    <string name="vui_label_close_activity">关闭</string>
    <string name="vui_label_close_dialog">关闭</string>
    <string name="vui_label_confirm">确认</string>
    <string name="vui_label_dialog">对话框|弹窗</string>
    <string name="vui_label_display_password">显示</string>
    <string name="vui_label_hide_password">隐藏</string>
    <string name="vui_label_input">输入</string>
    <string name="vui_label_reset">重设|清空|重置</string>
    <string name="vui_label_search">搜索</string>
    <string name="x_capital_off">close</string>
    <string name="x_capital_on">open</string>
    <string name="x_countdown_tips">%s (%ss)</string>
    <string name="x_date_picker_day">%d</string>
    <string name="x_date_picker_year">%d</string>
    <string name="x_font_typeface_bold">xpeng-fonts-bold</string>
    <string name="x_font_typeface_medium">xpeng-fonts-medium</string>
    <string name="x_font_typeface_number">xpeng-fonts-number</string>
    <string name="x_font_typeface_number_bold">xpeng-fonts-number-bold</string>
    <string name="x_font_typeface_regular">xpeng-fonts-regular</string>
    <string name="x_loading_dialog_message">loading...</string>
    <string name="x_number_indicator_desc_format">%1$s/%2$s</string>
    <string name="x_time_picker_hour">%02d</string>
    <string name="x_time_picker_minute">%02d</string>
</resources>
