<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/cl_content" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/ib_close" android:layout_marginTop="25dp" android:layout_marginStart="32dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" style="@style/XButton.Icon.Large.Close"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_01_size" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_send_summary_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_publish_title_d21" app:layout_constraintBottom_toBottomOf="@+id/ib_close" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/ib_close"/>
    <com.xiaopeng.xmart.cargallery.widget.PublishProgressView android:id="@+id/pbv_publish_progress" android:layout_width="360dp" android:layout_height="360dp" android:layout_marginTop="274dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="68sp" android:textColor="@color/publish_progress_number" android:id="@+id/tv_upload_progress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="113dp" android:fontFamily="@string/x_font_typeface_number" app:layout_constraintLeft_toLeftOf="@+id/pbv_publish_progress" app:layout_constraintRight_toRightOf="@+id/pbv_publish_progress" app:layout_constraintTop_toTopOf="@+id/pbv_publish_progress"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="30sp" android:textColor="@color/publish_uploading" android:id="@+id/tv_publishing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="70dp" android:text="@string/publish_uploading" android:fontFamily="@string/x_font_typeface_bold" app:layout_constraintBottom_toBottomOf="@+id/pbv_publish_progress" app:layout_constraintLeft_toLeftOf="@+id/pbv_publish_progress" app:layout_constraintRight_toRightOf="@+id/pbv_publish_progress"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="38sp" android:textColor="@color/x_theme_text_01" android:gravity="center" android:id="@+id/tv_leave_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="270dp" android:text="@string/share_publishing_do_not_leave_d21" android:lineHeight="50dp" app:layout_constraintLeft_toLeftOf="@+id/pbv_publish_progress" app:layout_constraintRight_toRightOf="@+id/pbv_publish_progress" app:layout_constraintTop_toBottomOf="@+id/pbv_publish_progress"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_progress_shadow" android:background="@drawable/bg_wifi_shadow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/pbv_publish_progress"/>
    <View android:background="@color/x_theme_text_01" android:layout_width="0dp" android:layout_height="1dp" android:layout_marginLeft="90dp" android:layout_marginRight="90dp" android:layout_marginBottom="300dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="30sp" android:textColor="@color/x_theme_text_03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="90dp" android:layout_marginBottom="330dp" android:text="@string/share_publish_tips_title" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="@color/x_theme_text_02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="90dp" android:layout_marginBottom="90dp" android:text="@string/share_publish_tips_content" android:lineHeight="60dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_url_qr_code" android:background="@drawable/bg_qr_code" android:visibility="gone" android:layout_width="360dp" android:layout_height="360dp" android:layout_marginTop="256dp" android:scaleType="center" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_qr_code_shadow" android:background="@drawable/bg_wifi_shadow" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="48dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_url_qr_code"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="34sp" android:textColor="@color/share_publish_success_content_d21" android:id="@+id/publish_progress_success_tv" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="789dp" android:text="@string/publish_success" android:drawableLeft="@drawable/ic_successful_release" android:drawablePadding="7dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="38sp" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_scan_tips" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="42dp" android:layout_marginBottom="176dp" android:text="@string/publish_scan_tips" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/publish_progress_success_tv"/>
</androidx.constraintlayout.widget.ConstraintLayout>
