<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/top_view_exit" android:layout_marginTop="25dp" android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/XButton.Icon.Large.Close"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="36sp" android:textColor="@color/color_date_text" android:gravity="end|bottom" android:id="@+id/top_view_date_taken" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@+id/top_view_exit" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/top_view_exit"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:id="@+id/top_view_back_to_list" android:layout_marginRight="16dp" android:text="@string/btn_go_to_list" app:layout_constraintBottom_toBottomOf="@+id/top_view_date_taken" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/top_view_date_taken" style="@style/XButton.Ghost.Large.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/top_view_send_out" android:layout_marginLeft="60dp" android:layout_marginBottom="36dp" android:text="@string/album_text_transfer" android:drawableStart="@drawable/ic_small_sendout" android:layout_marginStart="24dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_goneMarginStart="115dp" style="@style/XButton.Ghost.Drawable"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/top_view_publish" android:text="@string/album_text_share" android:drawableStart="@drawable/ic_small_share" android:layout_marginStart="36dp" app:layout_constraintBottom_toBottomOf="@+id/top_view_send_out" app:layout_constraintStart_toEndOf="@+id/top_view_send_out" app:layout_constraintTop_toTopOf="@+id/top_view_send_out" style="@style/XButton.Ghost.Drawable"/>
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/top_view_delete" android:layout_width="72dp" android:layout_height="72dp" android:src="@drawable/x_ic_small_delete" android:layout_marginEnd="32dp" app:layout_constraintBottom_toBottomOf="@+id/top_view_publish" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/top_view_publish" style="@style/XButton.Ghost.Drawable"/>
</androidx.constraintlayout.widget.ConstraintLayout>
