<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/app_container" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/ib_close" android:layout_marginTop="25dp" android:layout_marginStart="32dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" style="@style/XButton.Icon.Large.Back"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_02_size" android:textColor="@color/x_theme_text_01" android:gravity="center" android:id="@+id/tv_album_description" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@+id/ib_close" app:layout_constraintTop_toTopOf="@+id/ib_close"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/x_font_title_04_size" android:textColor="@color/x_btn_ghost_color_selector" android:id="@+id/xbt_chose" android:background="@drawable/x_btn_ghost_large_positive_selector" android:layout_width="120dp" android:layout_height="@dimen/x_btn_ghost_large_height" android:layout_marginRight="16dp" android:text="@string/album_text_chose" app:layout_constraintBottom_toBottomOf="@+id/ib_close" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/ib_close" style="@style/XButton.Ghost"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/x_font_title_04_size" android:textColor="@color/x_btn_ghost_color_selector" android:id="@+id/xbt_all_chose" android:background="@drawable/x_btn_ghost_large_positive_selector" android:layout_width="wrap_content" android:layout_height="@dimen/x_btn_ghost_large_height" android:layout_marginTop="30dp" android:text="@string/album_text_all_chose" android:paddingStart="16dp" android:paddingEnd="16dp" android:layout_marginStart="32dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" style="@style/XButton.Ghost"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/x_font_title_04_size" android:textColor="@color/x_btn_ghost_color_selector" android:id="@+id/xbt_cancel_chose" android:background="@drawable/x_btn_ghost_large_positive_selector" android:layout_width="120dp" android:layout_height="@dimen/x_btn_ghost_large_height" android:layout_marginRight="16dp" android:text="@string/publish_to_server_failure_cancel" app:layout_constraintBottom_toBottomOf="@+id/ib_close" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/ib_close" style="@style/XButton.Ghost"/>
    <com.xiaopeng.xui.widget.XTabLayout android:id="@+id/xtl_album_title" android:background="@null" android:layout_width="wrap_content" android:layout_height="@dimen/x_btn_ghost_large_height" app:layout_constraintBottom_toBottomOf="@+id/ib_close" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/ib_close" app:tabCustomBackground="true" app:tabsBarStyle="true" app:titleTextColorStateList="@color/x_tabs_bar_title_color" app:titleTextSize="30sp"/>
    <com.xiaopeng.xmart.cargallery.view.GalleryViewPager android:id="@+id/vp_album_page" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="142dp" android:overScrollMode="never" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/xbt_bottom" android:background="@drawable/bj_occlusion" android:visibility="gone" android:layout_width="match_parent" android:layout_height="180dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/xbt_transfer" android:visibility="gone" android:layout_marginLeft="32dp" android:layout_marginBottom="32dp" android:text="@string/album_text_transfer" android:drawableStart="@drawable/ic_small_sendout" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" style="@style/XButton.Ghost.Drawable"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/xbt_share" android:visibility="gone" android:text="@string/album_text_share" android:drawableStart="@drawable/ic_small_share" android:layout_marginStart="24dp" app:layout_constraintBottom_toBottomOf="@+id/xbt_transfer" app:layout_constraintLeft_toRightOf="@+id/xbt_transfer" app:layout_constraintTop_toTopOf="@+id/xbt_transfer" style="@style/XButton.Ghost.Drawable"/>
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/ib_delete" android:visibility="gone" android:layout_width="72dp" android:layout_height="72dp" android:layout_marginRight="32dp" android:src="@drawable/x_ic_small_delete" app:layout_constraintBottom_toBottomOf="@+id/xbt_transfer" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/xbt_transfer" style="@style/XButton.Ghost.Drawable"/>
</androidx.constraintlayout.widget.ConstraintLayout>
