<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/cl_content" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/ib_close" android:layout_marginTop="25dp" android:layout_marginStart="32dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0" style="@style/XButton.Icon.Large.Close"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_02_size" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_send_summary_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:text="@string/share_edit_file" app:layout_constraintBottom_toBottomOf="@+id/ib_close" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/ib_close"/>
    <Button android:id="@+id/btn_go_publish" android:layout_marginRight="16dp" android:text="@string/share_edit_publish" app:layout_constraintBottom_toBottomOf="@+id/ib_close" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="@+id/ib_close" style="@style/XButton.Real.Mid.Positive"/>
    <com.xiaopeng.xmart.cargallery.widget.SpeechInputLayout android:id="@+id/siv_input_layout" android:layout_width="@dimen/speech_width" android:layout_height="@dimen/speech_width" android:layout_marginLeft="90dp" android:layout_marginTop="620dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XEditText android:textSize="32sp" android:textColor="@color/x_theme_text_02" android:textColorHint="@color/x_theme_text_04" android:gravity="top" android:id="@+id/et_share_edit_input" android:background="@drawable/bg_publish_edit" android:paddingLeft="24dp" android:paddingTop="32dp" android:paddingRight="24dp" android:paddingBottom="32dp" android:focusable="true" android:focusableInTouchMode="true" android:fadingEdgeLength="0dp" android:layout_width="580dp" android:layout_height="220dp" android:layout_marginLeft="60dp" android:layout_marginTop="218dp" android:hint="@string/share_edit_hint" android:cursorVisible="true" android:maxLength="1000" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="28sp" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_input_counter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="90dp" android:layout_marginTop="454dp" android:text="0/1000" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_share_media_content" android:background="@drawable/bg_share_media_content" android:layout_width="305dp" android:layout_height="180dp" android:layout_marginTop="218dp" android:layout_marginRight="90dp" android:scaleType="fitXY" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_video_cover" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_large_play" app:layout_constraintBottom_toBottomOf="@+id/iv_share_media_content" app:layout_constraintLeft_toLeftOf="@+id/iv_share_media_content" app:layout_constraintRight_toRightOf="@+id/iv_share_media_content" app:layout_constraintTop_toTopOf="@+id/iv_share_media_content"/>
    <com.xiaopeng.xmart.cargallery.widget.NumberIndicatorView android:id="@+id/miv_number" android:visibility="gone" android:layout_width="48dp" android:layout_height="48dp" app:layout_constraintBottom_toTopOf="@+id/iv_share_media_content" app:layout_constraintLeft_toRightOf="@+id/iv_share_media_content" app:layout_constraintRight_toRightOf="@+id/iv_share_media_content" app:layout_constraintTop_toTopOf="@+id/iv_share_media_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>
